Make page look gooood

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -2,5 +2,9 @@ body {
   font-size: 1.6rem;
   box-sizing: border-box;
   background: #e5ded8;
+  //height: auto;
 }
 
+html {
+  font-size: 62.5%;
+}
