--- a/src/styles/views/magazine.scss
+++ b/src/styles/views/magazine.scss
@@ -1,6 +1,54 @@
 .magazine-container {
   background-position: center center;
   background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 1rem;
+  row-gap: 3rem;
+
+  .page {
+    width: 100%;
+    height: auto;
+    max-width: 500px;
+    display: block;
+  }
+
+  .navigation-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100%;
+    max-width: 700px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .btn {
+      cursor: pointer;
+      display: block;
+      width: 20%;
+      max-width: 50px;
+    }
+
+    .hidden {
+      visibility: hidden;
+    }
+
+    @media only screen and (max-width: 700px) {
+      position: static;
+      transform: initial;
+      width: 60%;
+    }
+  }
+
+  @media only screen and (max-width: 700px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
